apps/audiobookshelf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: audiobookshelf
    app.kubernetes.io/part-of: audiobookshelf
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: audiobookshelf
  template:
    metadata:
      labels:
        app.kubernetes.io/name: audiobookshelf
    spec:
      nodeSelector:
        kubernetes.io/hostname: pj
      containers:
        - name: audiobookshelf
          image: ghcr.io/advplyr/audiobookshelf:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: data
              mountPath: /config
              subPath: config
            - name: data
              mountPath: /audiobooks
              subPath: audiobooks
            - name: data
              mountPath: /metadata
              subPath: metadata
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: audiobookshelf-data
