apps/audiobookshelf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: audiobookshelf
    app.kubernetes.io/part-of: audiobookshelf
spec:
  type: ClusterIP
  clusterIP: 10.43.100.14
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app.kubernetes.io/name: audiobookshelf
